--- a/assets/css/app.scss
+++ b/assets/css/app.scss
@@ -5,6 +5,12 @@
     border: 1px solid black;
 }
 
+/* Scale canvas with resize attribute to full size */
+canvas[resize] {
+    width: 100%;
+    height: 100%;
+}
+
 #abundance {
     border: 1px solid black;
 }
