--- a/lib/acgp_web/live/live_abundance.html.leex
+++ b/lib/acgp_web/live/live_abundance.html.leex
@@ -1,8 +1,121 @@
-<svg width="<%= @params.width * @params.scale%>" height="<%= @params.height * @params.scale %>" phx-click="click">
-    <%= for {cell, i} <- Enum.with_index(@cells) do %>
-        <%= if cell == 1 do %>
-            <rect x="<%= calc_x_pos(i, @params) %>" y="<%= calc_y_pos(i, @params) %>" width="<%= @params.cellSize * @params.scale%>" height="<%= @params.cellSize * @params.scale %>" style="fill:blue;stroke:black;stroke-width:1;fill-opacity:0.1;stroke-opacity:0.9" />
-            <text x="<%= calc_x_pos(i, @params) + 25 %> " y="<%= calc_y_pos(i, @params) + 25 %>" class="small"><%= i %></text>
-        <%  end %>
-    <% end %>
-</svg>
+<button id="flipState">Turn on /  off</button>
+<canvas id="myCanvas" resize></canvas>
+
+<script type="text/paperscript" canvas="myCanvas">
+console.log('RUN')
+
+var isOn = false
+var onCol = '#2A1F1D';
+var offCol = '#F2EDEC';
+
+var frame = 0
+
+var width = 500
+var height = 500
+
+var cellSize = 5;
+var scale = 5;
+
+var numXCells = width / cellSize;
+var numYCells = height / cellSize;
+
+var totalCells = numXCells * numYCells
+
+var cells = [];
+var paths = [];
+
+var hitOptions = {
+	segments: true,
+	stroke: true,
+	fill: true,
+	tolerance: 5
+};
+
+for(var i = 0; i < (totalCells); i++) {
+	var cell = 0//Math.random() < 0.5 ? 1 : 0;
+	cells.push(cell)
+}
+
+cells.forEach(function(cell, i) {
+	paths.push(cell == 1 ? drawRec(i, onCol) : drawRec(i, offCol));
+})
+
+function onFrame(event) {
+	if (isOn && frame % 10 == 0) {
+		updateCells()
+	}
+	frame++
+}
+
+function calcNeighbours(indx) {
+	var y = Math.floor(indx / numYCells);
+	var x = indx % numXCells;
+
+	// conditions
+	var canLeft = x > 0
+	var canRight = x < numXCells
+	var canUp = y > 0
+	var canDown = y < numYCells - 1
+
+
+	upln = canLeft && canUp ? cells[indx - (numXCells - 1)] : 0
+	upn = canUp ? cells[indx - numXCells] : 0
+	uprn = canRight && canUp ? cells[indx - (numXCells + 1)] : 0
+	ln = canLeft ? cells[indx - 1] : 0
+	rn = canRight ? cells[indx + 1] : 0
+	downln = canDown && canLeft ? cells[indx + (numXCells - 1)] : 0
+	downn = canDown ? cells[indx + numXCells] : 0
+	downrn = canDown && canRight ? cells[indx + (numXCells + 1)] : 0
+
+	return upn + ln + rn + downn + upln + uprn + downln + downrn
+}
+
+document.getElementById('flipState').onclick = function () {
+	isOn = !isOn
+}
+
+function onMouseDown(event) {
+	segment = path = null;
+	var hitResult = project.hitTest(event.point, hitOptions);
+	var path = hitResult.item
+
+	var cell = path.index;
+	calcNeighbours(cell);
+	cells[cell] == 1 ? turnOffCell(path, cell) : turnOnCell(path, cell)
+}
+
+function updateCells() {
+	cells.forEach(function(cal, cell) {
+		var neighbours = calcNeighbours(cell)
+		if(cells[cell] == 1 && (neighbours == 2 || neighbours == 3)) {
+			return
+		} else if(cells[cell] == 0 && neighbours == 3) {
+			turnOnCell(paths[cell], cell)
+		} else {
+			turnOffCell(paths[cell], cell)
+		}
+	})
+}
+
+function turnOffCell(path, cell) {
+	path.fillColor = offCol
+	cells[cell] = 0
+}
+
+function turnOnCell(path, cell) {
+	path.fillColor = onCol
+	cells[cell] = 1
+}
+
+function drawRec(indx, col) {
+	var y = Math.floor(indx / numXCells);
+	var x = indx % numXCells;
+	var size = cellSize * scale;
+	var rectangle = new Rectangle(new Point(x * size, y * size), new Size(size, size));
+	var path = new Path.Rectangle(rectangle);
+	path.fillColor = col;
+	path.selected = false;
+	return path;
+}
+
+</script>
