--- a/lib/acgp_web/live/live_abundance.html.leex
+++ b/lib/acgp_web/live/live_abundance.html.leex
@@ -1,18 +1,25 @@
 <button id="flipState">Turn on /  off</button>
-<canvas id="myCanvas" width=800 height=800 phx-hook="SendCells"></canvas>
+<canvas id="myCanvas" phx-hook="SendCells" width="400" height="400"></canvas>
+
+<%= for user <- @users do %>
+<li><%= if @my_name == user.name do %>Me (<%= user.name %>)<% else %><%= user.name %><% end %> Index: <%= @player_index %></li>
+<% end %>
 
 <div id="cellData" phx-hook="Cells" data-cells="<%= Jason.encode!(@cells) %>"></div>
 
 
 <script type="text/paperscript" canvas="myCanvas">
+var playerNum = <%= @player_index %>
 var isOn = false
 var frame = 0
-var onCol = '#2A1F1D';
 var offCol = '#F2EDEC';
+var cols = [offCol, '#FF5733', '#900C3F', '#3339FF']
+var onCol = cols[playerNum]
+
 var width = 100;
 var height = 100;
 var cellSize = 10;
-var scale = 3;
+var scale = 5;
 var numXCells = width / cellSize;
 var numYCells = height / cellSize;
 var cells = [];
@@ -36,8 +43,11 @@ setInterval(function(){
 }, 500);
 
 
-function updateBoard(cells) {
-    cells.map((x, cell) => x == 1 ? turnOnCell(paths[cell], cell) : turnOffCell(paths[cell], cell))
+function updateBoard(newCells) {
+    newCells.map((x, cell) => {
+        paths[cell].fillColor = cols[x];
+        cells[cell] = x;
+    })
 }
 
 window.updateBoard = updateBoard
@@ -104,13 +114,13 @@ function onMouseDown(event) {
 
 	var cell = path.index;
 	calcNeighbours(cell);
-	cells[cell] == 1 ? turnOffCell(path, cell) : turnOnCell(path, cell)
+	cells[cell] != 0 ? turnOffCell(path, cell) : turnOnCell(path, cell)
 }
 
 function updateCells() {
 	cells.forEach(function(cal, cell) {
 		var neighbours = calcNeighbours(cell)
-		if(cells[cell] == 1 && (neighbours == 2 || neighbours == 3)) {
+		if(cells[cell] != 0 && (neighbours == 2 || neighbours == 3)) {
 			return
 		} else if(cells[cell] == 0 && neighbours == 3) {
 			turnOnCell(paths[cell], cell)
@@ -127,7 +137,7 @@ function turnOffCell(path, cell) {
 
 function turnOnCell(path, cell) {
 	path.fillColor = onCol
-	cells[cell] = 1
+	cells[cell] = playerNum
 }
 
 function drawRec(indx, col, numXCells, numYCells, cellSize, cellScale) {
