Change how we render game

--- a/lib/acgp_web/templates/page/index.html.eex
+++ b/lib/acgp_web/templates/page/index.html.eex
@@ -19,7 +19,7 @@
       <p class="subtitle"><a href="https://www.askhole.io/" target="_blank">Askhole.io</a></p>
       <div class="content">
         <p>The First game on the the platform. Filled with inappropriate, deeply controversial, philosophical, and vulnerable inquiries, this deck of unusual questions will keep your night full of nervous laughter and your relationships somewhat distressing.</p>
-        <p><a href="/askhole/<%= Enum.random(1..10240) %>">Play now</a></p>
+        <p><a href="/askhole">Play now</a></p>
       </div>
     </article>
   </div>
@@ -32,7 +32,7 @@
       <p class="subtitle"><a href="https://cardsagainsthumanity.com/" target="_blank">cardsagainsthumanity.com</a></p>
       <div class="content">
         <p>Cards Against Humanity is a party game for horrible people. Unlike most of the party games you've played before, Cards Against Humanity is as despicable and awkward as you and your friends.</p>
-        <p><a href="/cah/<%= Enum.random(1..10240) %>">Play now</p>
+        <p><a href="/cah">Play now</p>
       </div>
     </article>
   </div>
@@ -45,7 +45,7 @@
       <p class="subtitle"><a href="#" target="_blank">ACGP.com</a></p>
       <div class="content">
         <p>One person draws, the others guess.  The closest one wins.</p>
-        <p><a href="/drawit/<%= Enum.random(1..10240) %>">Play now</a></p>
+        <p><a href="/drawit">Play now</a></p>
       </div>
     </article>
   </div>
@@ -58,7 +58,7 @@
       <p class="subtitle"><a href="#" target="_blank">ACGP.com</a></p>
       <div class="content">
         <p>A quiz to find the most compelling answer (3 or more players)</p>
-        <p><a href="/aw/<%= Enum.random(1..10240) %>">Play now</p>
+        <p><a href="/aw">Play now</p>
       </div>
     </article>
   </div>
