--- a/lib/acgp_web/templates/layout/app.html.eex
+++ b/lib/acgp_web/templates/layout/app.html.eex
@@ -11,6 +11,7 @@
     <main role="main" class="container">
       <p class="alert alert-info" role="alert"><%= get_flash(@conn, :info) %></p>
       <p class="alert alert-danger" role="alert"><%= get_flash(@conn, :error) %></p>
+      <%= render "nav.html" %>
       <%= @inner_content %>
     </main>
     <%= csrf_meta_tag() %>
