--- a/lib/acgp_web/live/ask_hole.html.leex
+++ b/lib/acgp_web/live/ask_hole.html.leex
@@ -6,7 +6,7 @@
                     <p class="title"><%= if @question == "" do %>Question<% else %><%= @question %><% end %></p>
                 </article>
                 <article class="tile is-child notification is-danger has-text-centered">
-                    <button class="button is-large" phx-click="new_card"><%= if @question == "" do %>Start Questions<% else %>Change question<% end %></button>
+                    <button class="button is-large" phx-click="new_card">Change question</button>
                 </article>
             </div>
             <div class="tile is-parent">
@@ -14,8 +14,13 @@
                     <figure class="image">
                         <label for="local-stream">Local Video Stream</label>
                         <video id="local-stream" autoplay muted></video>
-                        <button id="call" class="button">Connect Video</button>
-                        <button id="disconnect" class="hidden">Disconnect</button>
+
+                        <%= if @connected do %>
+                            <button phx-click="changeConnection" onclick="endCall()">Disconnect</button>
+                        <% else %>
+                            <button phx-click="changeConnection" onclick="startVideoCall()">Connect Video</button>
+                        <% end %>
+
                     </figure>
                     <figure class="image">
                         <label for="remote-stream">Remote Video Stream</label>
@@ -45,28 +50,12 @@
 
 // Constants
 const devices = navigator.mediaDevices;
-const callButton = document.getElementById('call');
-const disconnectButton = document.getElementById('disconnect');
-
 const remoteVideo = document.getElementById('remote-stream');
 const localVideo = document.getElementById('local-stream');
 
 let peerConnection;
 let channel;
 let remoteStream = new MediaStream();
-
-disconnectButton.style.visibility = 'hidden';
-
-
-function showConnect() {
-    disconnectButton.className = "hidden"
-    callButton.className = "button"
-}
-
-function showDisconnect() {
-        disconnectButton.className = "button"
-        callButton.className = "hidden"
-}
 
 
 function addCandidate(params) {
@@ -75,6 +64,14 @@ function addCandidate(params) {
      peerConnection.addIceCandidate(candidate).catch(e => {
             console.log("Failure during addIceCandidate(): " + e);
     });
+}
+
+function startVideoCall() {
+    window.videoCall(peerConnection, channel);
+}
+
+function endCall() {
+    window.videoDisconnect(localVideo, remoteVideo, peerConnection, channel);
 }
 
 
@@ -89,23 +86,12 @@ document.addEventListener("DOMContentLoaded", function(){
      .receive("error", resp => { console.log("Unable to join", resp) })
 
 
-     callButton.onclick = () => {
-        window.videoCall(peerConnection, channel);
-        showDisconnect();
-       }
-
-      disconnectButton.onclick = () => {
-        window.videoDisconnect(localVideo, remoteVideo, peerConnection, channel);
-        showConnect();
-      }
-
      channel.on('peer-message', payload => {
           const message = JSON.parse(payload.body);
           switch (message.type) {
             case 'video-offer':
               console.log('offered: ', message.content);
               window.answerCall(message.content, peerConnection, channel);
-              showDisconnect()
             break;
             case 'video-answer':
               console.log('answered: ', message.content);
@@ -116,7 +102,6 @@ document.addEventListener("DOMContentLoaded", function(){
             break;
             case 'disconnect':
               window.videoDisconnect(localVideo, remoteVideo, peerConnection, channel);
-              showConnect()
             break;
             default:
               console.error('unhandled message type', message.type);
