Fixing Answer wrong

--- a/lib/acgp_web/live/answer_wrong.html.leex
+++ b/lib/acgp_web/live/answer_wrong.html.leex
@@ -8,8 +8,8 @@
     <% end %>
 <% end %>
 
+<button phx-click="fill_answers">Fill</button>
 
-
-    <%= for user <- @users do %>
+<%= for user <- @users do %>
     <li><%= if @my_name == user.name do %>Me (<%= user.name %>)<% else %><%= user.name %><% end %> Score: <%= user.score %> <%= if user.is_active do %>I am the Drawing<% end %></li>
-    <% end %>
+<% end %>
