--- a/assets/css/app.scss
+++ b/assets/css/app.scss
@@ -1,6 +1,14 @@
 /* This file is for your main application css. */
 @import "./bulma.css";
 
+.line-through {
+  text-decoration: line-through;
+}
+
+.bold {
+  color: red;
+}
+
 #drawItCanvas {
     border: 1px solid black;
 }
