--- a/lib/acgp_web/live/test_state.html.leex
+++ b/lib/acgp_web/live/test_state.html.leex
@@ -1,4 +1,4 @@
-<h1>Test</h1>
+<h1 class="title">Test <%= @game_state.title %></h1>
 
 <button  phx-click="guess" phx-value-user="<%= @my_name %>">Submit answer</button>
 
