--- a/lib/acgp_web/templates/page/index.html.eex
+++ b/lib/acgp_web/templates/page/index.html.eex
@@ -1,4 +1,4 @@
-<section class="hero is-medium is-dark is-bold">
+<section class="hero is-small is-dark is-bold">
   <div class="hero-body">
     <div class="container">
       <p class="title">
@@ -16,10 +16,10 @@
   <div class="tile is-parent">
     <article class="tile is-child notification is-danger">
       <p class="title">Askhole</p>
-      <p class="subtitle"><a href="https://www.askhole.io/" target="_blank">Askhole.io</a></p>
+      <p class="subtitle"><a href="/askhole">Play now</a></p>
       <div class="content">
         <p>The First game on the the platform. Filled with inappropriate, deeply controversial, philosophical, and vulnerable inquiries, this deck of unusual questions will keep your night full of nervous laughter and your relationships somewhat distressing.</p>
-        <p><a href="/askhole">Play now</a></p>
+        <p><a href="https://www.askhole.io/" target="_blank">Askhole.io</a></p>
       </div>
     </article>
   </div>
@@ -28,11 +28,10 @@
 <div class="tile is-vertical is-12">
   <div class="tile is-parent">
     <article class="tile is-child notification is-danger">
-      <p class="title">Cards Against Humanity</p>
-      <p class="subtitle"><a href="https://cardsagainsthumanity.com/" target="_blank">cardsagainsthumanity.com</a></p>
+      <p class="title">Make me laugh</p>
+      <p class="subtitle"><a href="/mml">Play now</a></p>
       <div class="content">
-        <p>Cards Against Humanity is a party game for horrible people. Unlike most of the party games you've played before, Cards Against Humanity is as despicable and awkward as you and your friends.</p>
-        <p><a href="/cah">Play now</p>
+        <p>Make me laugh is a game to amuse or traumatise your friends.  The funniest answer wins.</p>
       </div>
     </article>
   </div>
@@ -42,10 +41,9 @@
   <div class="tile is-parent">
     <article class="tile is-child notification is-danger">
       <p class="title">DrawIt</p>
-      <p class="subtitle"><a href="#" target="_blank">ACGP.com</a></p>
+      <p class="subtitle"><a href="/drawit">Play now</a></p>
       <div class="content">
         <p>One person draws, the others guess.  The closest one wins.</p>
-        <p><a href="/drawit">Play now</a></p>
       </div>
     </article>
   </div>
@@ -54,11 +52,10 @@
 <div class="tile is-vertical is-12">
   <div class="tile is-parent">
     <article class="tile is-child notification is-danger">
-      <p class="title"><a href="/aw/<%= Enum.random(1..10240) %>">AnswerWrong</a></p>
-      <p class="subtitle"><a href="#" target="_blank">ACGP.com</a></p>
+      <p class="title">AnswerWrong</p>
+      <p class="subtitle"><a href="/aw">Play now</a></p>
       <div class="content">
         <p>A quiz to find the most compelling answer (3 or more players)</p>
-        <p><a href="/aw">Play now</p>
       </div>
     </article>
   </div>
