--- a/lib/acgp_web/templates/layout/nav.html.eex
+++ b/lib/acgp_web/templates/layout/nav.html.eex
@@ -2,7 +2,7 @@
   <div class="navbar-brand">
     <a class="navbar-item" href="/">Home</a>
     <a class="navbar-item" href="/askhole">Askhole</a>
-    <a class="navbar-item" href="/cah">Cards against humanity</a>
+    <a class="navbar-item" href="/mml">Make me laugh</a>
     <a class="navbar-item" href="/drawit">DrawIt</a>
     <a class="navbar-item" href="/aw">AnswerWrong</a>
   </div>
