--- a/lib/acgp_web/live/answer_wrong.html.leex
+++ b/lib/acgp_web/live/answer_wrong.html.leex
@@ -1,10 +1,10 @@
 <%= if length(@users) < 3 do %>
     <%= live_component @socket, AcgpWeb.WaitingRoom %>
 <% else %>
-    <%= if am_I_draw_king(@my_name, @users) do %>
-        <%= live_component @socket, AcgpWeb.AWAnsComp, id: "AWAnsComp", state: @state, my_name: @my_name, users: @users, current_guesses: @current_guesses %>
+    <%= if GameUtils.is_active_user(@my_name, @game_state) do %>
+        <%= live_component @socket, AcgpWeb.AWAnsComp, id: "AWAnsComp", game_state: @game_state, my_name: @my_name, users: @users %>
     <% else %>
-        <%= live_component @socket, AcgpWeb.AWQnComp, id: "AWQnComp", state: @state, my_name: @my_name, users: @users, current_guesses: @current_guesses %>
+        <%= live_component @socket, AcgpWeb.AWQnComp, id: "AWQnComp", game_state: @game_state, my_name: @my_name, users: @users %>
     <% end %>
 <% end %>
 
@@ -12,8 +12,8 @@
 <%= if length(@users) >= 3 do %>
 <div class="content is-large">
     <ol type="1">
-    <%= for user <- Enum.sort(@users, &(&1.score >= &2.score)) do %>
-        <li><%= if @my_name == user.name do %>Me<% else %><%= user.name %><% end %> | <%= user.score %> point(s)</li>
+    <%= for user <- @users do %>
+        <li><%= if @my_name == user.name do %>Me<% else %><%= user.name %><% end %> | <%= GameUtils.score(@game_state, user.name) %> point(s)</li>
     <% end %>
     </ol>
 </div>
