--- a/lib/acgp_web/live/make_me_laugh.html.leex
+++ b/lib/acgp_web/live/make_me_laugh.html.leex
@@ -27,12 +27,6 @@
                     <% end %>
                 </article>
             </div>
-            <div class="content is-large">
-                <ol type="1">
-                    <%= for user <- @users do %>
-                        <li><%= if @my_name == user.name do %>Me<% else %><%= user.name %><% end %> | <%= GameUtils.score(@game_state, user.name) %> point(s)</li>
-                    <% end %>
-                </ol>
-            </div>
     </div>
+    <%= live_component @socket, AcgpWeb.PlayerList, id: "PlayerList", game_state: @game_state, my_name: @my_name, users: @users %>
 </div>
