--- a/lib/acgp_web/live/draw_it.html.leex
+++ b/lib/acgp_web/live/draw_it.html.leex
@@ -48,8 +48,8 @@ function onMouseUp(event) {
 	window.userSVG = paper.project.exportSVG({asString:true})
 }
 </script>
-<h1 class="title"><%= @game_state.active_user %></h1>
-<%=  if true do %>
+<%=  if length(@users) >= 2 do %>
+
     <%= if GameUtils.is_active_user(@my_name, @game_state) do %>
         <div class="tile is-ancestor">
             <div class="tile is-vertical is-12">
@@ -101,8 +101,6 @@ function onMouseUp(event) {
     <h1 class="title">Waiting for more players (need at least 2 people)</h1>
 <% end %>
 
-<button class="button" phx-click="print_state">Print</button>
-
-<%= if true do %>
+<%= if length(@users) >= 2 do %>
 <%= live_component @socket, AcgpWeb.PlayerList, id: "PlayerList", game_state: @game_state, my_name: @my_name, users: @users %>
 <% end %>
