--- a/lib/acgp_web/live/answer_wrong.html.leex
+++ b/lib/acgp_web/live/answer_wrong.html.leex
@@ -1,3 +1,5 @@
+<%= live_component @socket, AcgpWeb.BrokenState, id: "BrokenState", game_state: @game_state, users: @users %>
+
 <%= if length(@users) < 3 do %>
     <%= live_component @socket, AcgpWeb.WaitingRoom %>
 <% else %>
