--- a/lib/acgp_web/live/make_me_laugh.html.leex
+++ b/lib/acgp_web/live/make_me_laugh.html.leex
@@ -1,3 +1,5 @@
+<%= live_component @socket, AcgpWeb.BrokenState, id: "BrokenState", game_state: @game_state, users: @users %>
+
 <div class="tile is-ancestor">
     <div class="tile is-vertical is-12">
         <div class="tile">
